--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday">
 	<meta name="robots" content="index, follow" />
-	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" />
 	<meta name="keywords" content="Birthday, Happy">
 	<!-- Strat of Facebook Meta -->
 	<meta property="og:type" content="E-Greeting" />
@@ -24,46 +23,62 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="loading.css">
 	<link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
 	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'> -->
 	<link rel="stylesheet/less" href="cake.less">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
+	<style> 
+		#example1 {
+		  background-image: url(1.jpeg),url(2.jpeg);
+		  background-position: right, left;
+		  background-repeat: no-repeat, repeat;
+		  padding: 15px;
+		}
+		</style>
 </head>
 
-<body>
+<body id="example1">
 	<div class="loading"></div>
 	<audio class="song" controls loop>
 		<source src="hbd.mp3">
 		</source>
 		Your browser isn't invited for super fun audio time.
 	</audio>
-	<div class="balloons text-center" id="b1">
-		<h2 style="color:#F2B300;">A</h2>
-	</div>
-	<div class="balloons text-center" id="b2">
-		<h2 style="color:#0719D4;">N</h2>
-	</div>
-	<div class="balloons text-center" id="b3">
-		<h2 style="color:#D14D39;">A</h2>
-	</div>
-	<div class="balloons text-center" id="b4">
-		<h2 style="color:#8FAD00;">N</h2>
-	</div>
-	<div class="balloons text-center" id="b5">
-		<h2 style="color:#8377E4;">Y</h2>
-	</div>
-	<div class="balloons text-center" id="b6">
-		<h2 style="color:#99C96A;">A</h2>
-	</div>
-
-	<img src="Balloon-Border.png" width="100%" class="balloon-border">
-
-
 	<div class="container">
-
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<div class="balloons text-center" id="b1">
+					<h1 style="color:#8377E4;"></h1>
+				</div>
+				<div class="balloons text-center" id="b2">
+					<h1 style="color:#8377E4;"></h1>
+				</div>
+				<div class="balloons text-center" id="b3">
+					<h1 style="color:#ff0000;">O</h1>
+				</div>
+				<div class="balloons text-center" id="b4">
+					<h1 style="color:#ff0000;">V</h1>
+				</div>
+				<div class="balloons text-center" id="b5">
+					<h1 style="color:#ff0000;">E</h1>
+				</div>
+				<div class="balloons text-center" id="b6">
+					<h1 style="color:#ff0000;">E</h1>
+				</div>
+				<div class="balloons text-center" id="b7">
+					<h1 style="color:#8377E4;"></h1>
+				</div>
+				<div class="balloons text-center" id="b8">
+					<h1 style="color:#8377E4;"></h1>
+				</div>
+			</div>
+		</div>
+	</div>
+	<img src="Balloon-Border.png" width="100%" class="balloon-border">
+	<div class="container">
 		<div class="row">
 			<div class="col-md-2 col-xs-2 bulb-holder">
 				<div class="bulb" id="bulb_yellow"></div>
@@ -89,9 +104,6 @@
 				<img src="banner.png" class="bannar">
 			</div>
 		</div>
-		<!-- <div class="row message">
-			<div class="col-md-12"><p>Khushbu</p></div>
-		</div> -->
 		<div class="row cake-cover">
 			<div class="col-md-12 texr-center">
 				<div class="cake">
@@ -171,26 +183,15 @@
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
-					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
-			<!-- <div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div> -->
 		</div>
 
 
 	</div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <script src="effect.js"></script>
 <script>
 	(function (i, s, o, g, r, a, m) {
